--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "config": "0.4.16",
     "express": "3.0.0rc4",
     "jade": "*",
+    "mongoose": "3.1.2",
     "redis": "0.7.2",
     "websocket": "1.0.7"
   }
