--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "config": "0.4.16",
     "express": "3.0.0rc4",
     "jade": "*",
+    "mocha": "1.5.0",
     "moment": "1.7.0",
     "mongoose": "3.1.2",
     "redis": "0.7.2",
+    "should": "1.2.0",
     "websocket": "1.0.7",
     "winston": "0.6.2"
   }
