--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "pig-server",
-  "version": "0.0.1",
+  "name": "cc-server",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "node app"
   },
   "dependencies": {
-    "async": "0.1.22",
-    "bcrypt": "0.7.2",
-    "config": "0.4.16",
-    "express": "3.0.0rc4",
-    "jade": "*",
-    "mocha": "1.5.0",
-    "moment": "1.7.0",
-    "mongoose": "3.1.2",
-    "redis": "0.7.2",
-    "should": "1.2.0",
-    "winston": "0.6.2"
+    "async": "~0.2.8",
+    "bcrypt": "~0.7.5",
+    "config": "~0.4.24",
+    "express": "~3.2.3",
+    "jade": "~0.30.0",
+    "mocha": "~1.9.0",
+    "moment": "~2.0.0",
+    "mongoose": "~3.6.9",
+    "redis": "~0.8.3",
+    "should": "~1.2.2",
+    "winston": "~0.7.1"
   }
 }
